Fix style bug of error color not showing

--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -229,4 +229,5 @@ form table
       color: $no-clone-color
 
   .junk-well
-    background: $error-color
+    .well-title, .well-caption
+      background: $error-color
